--- a/Analizar/Cube.html
+++ b/Analizar/Cube.html
@@ -515,20 +515,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i280.image.css:image/base/css*/
 #i280 { opacity: 1; }
 /*#/#*//*#i280.i281.positioning.css:positioning/base/css.2*/
-#i280 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 33px;
-        -ms-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+#i280 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 32px;
+        -ms-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 14px; color: #24254a; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 238px; height: 51px;
-        -ms-transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 259px; height: 51px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+}
+/*#/#*//*#i4.i306.text.css:text/base/css*/
+#i306 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Light; font-size: 14px; color: #24254a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i306.i307.positioning.css:positioning/base/css.1*/
+#i306 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 283px; height: 51px;
+        -ms-transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -553,15 +562,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i5.i294.image.css:image/base/css*/
-#i294 { opacity: 1; }
-/*#/#*//*#i294.i295.positioning.css:positioning/base/css.2*/
-#i294 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 33px;
-        -ms-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
 }
 /*#/#*//*#i5.i230.image.css:image/base/css*/
 #i230 { opacity: 1; }
@@ -701,14 +701,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
+/*#/#*//*#i5.i300.image.css:image/base/css*/
+#i300 { opacity: 1; }
+/*#/#*//*#i300.i301.positioning.css:positioning/base/css.2*/
+#i300 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 32px;
+        -ms-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+}
 /*#/#*//*#i5.i282.text.css:text/base/css*/
-#i282 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i282 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Light; font-size: 14px; color: #24254a; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i282.i283.positioning.css:positioning/base/css.1*/
-#i282 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 261px; height: 75px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
+#i282 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 251px; height: 75px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -734,6 +743,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i6.i302.image.css:image/base/css*/
+#i302 { opacity: 1; }
+/*#/#*//*#i302.i303.positioning.css:positioning/base/css.2*/
+#i302 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 32px;
+        -ms-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+}
 /*#/#*//*#i6.i272.image.css:image/base/css*/
 #i272 { opacity: 1; }
 /*#/#*//*#i272.i273.positioning.css:positioning/base/css.2*/
@@ -752,23 +770,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i296.image.css:image/base/css*/
-#i296 { opacity: 1; }
-/*#/#*//*#i296.i297.positioning.css:positioning/base/css.2*/
-#i296 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 33px;
-        -ms-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-        transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
-}
 /*#/#*//*#i6.i288.text.css:text/base/css*/
-#i288 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i288 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 18px; color: #24254a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i288.i289.positioning.css:positioning/base/css.1*/
-#i288 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 219px; height: 49px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+#i288 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 245px; height: 49px;
+        -ms-transform: translate(-50%, -50%) translate(-1px, 72px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 72px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 72px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 72px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #ffffff; opacity: 0.00;
@@ -791,6 +800,30 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i304.font-local.css:font/font-local/css*/
+/*#i304.i305.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'Gotham-Light';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/Gotham-Light.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
+/*#/#*//*#i308.font-local.css:font/font-local/css*/
+/*#i308.i309.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'GothamMedium_1';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/GothamMedium_1.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -803,11 +836,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/vtNFrEY.jpg"/>
+<img id="i130" src="https://i.imgur.com/DF5Npho.jpg"/>
 <!--#/#--><!--#i4.i280.image.html:image/html-->
-<img id="i280" src="https://i.imgur.com/tyKM09U.png"/>
+<img id="i280" src="https://i.imgur.com/dmvXJQj.png"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Nuestra experiencia y compromiso certifican nuestra calidad en cada uno de nuestros servicios.</div>
+<div id="i14">¡Es momento de cuidarte!</div>
+<!--#/#--><!--#i4.i306.text.html:text/html-->
+<div id="i306">Cuando previenes tienes mayores probabilidades de tener un buen estado de salud.</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -816,12 +851,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i294.image.html:image/html-->
-<img id="i294" src="https://i.imgur.com/tyKM09U.png"/>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
-<img id="i230" src="https://i.imgur.com/ozR7OIE.jpg"/>
+<img id="i230" src="https://i.imgur.com/jZ4divg.jpg"/>
+<!--#/#--><!--#i5.i300.image.html:image/html-->
+<img id="i300" src="https://i.imgur.com/dmvXJQj.png"/>
 <!--#/#--><!--#i5.i282.text.html:text/html-->
-<div id="i282">Es momento de cuidarte, cuando previenes tienes mayores probabilidades de tener un buen estado de salud.</div>
+<div id="i282">¡Ven a conocer nuestros servicios en la sede de Gran Estación, Costado Esfera, Lc. 1-12!</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -830,14 +865,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i6" class="panel-content-holder">
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
+<!--#/#--><!--#i6.i302.image.html:image/html-->
+<img id="i302" src="https://i.imgur.com/dmvXJQj.png"/>
 <!--#/#--><!--#i6.i272.image.html:image/html-->
 <img id="i272" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/ahLfftI.jpg"/>
-<!--#/#--><!--#i6.i296.image.html:image/html-->
-<img id="i296" src="https://i.imgur.com/tyKM09U.png"/>
 <!--#/#--><!--#i6.i288.text.html:text/html-->
-<div id="i288">¡Ven a vernos a nuestra sede Gran Estación!</div>
+<div id="i288">Más de 1200 pruebas para tus diagnósticos.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -855,6 +890,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         <span>Swipe</span>
     </div>
 </div>
+<!--#/#--><!--#i304.font.html:font/html-->
+<!--#/#--><!--#i308.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -866,7 +903,7 @@ cube_i2.init({
     direction: 'horizontal',
     bannerShowDelay: 1,
     autoRotateEnabled: true,
-    autoRotateDelay: 4,
+    autoRotateDelay: 7,
     autoRotateDirection: 'rotateNext',
     defaultButtonsOnPanels: false,
     transition: 0.8
@@ -897,12 +934,12 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
      
-/*#/#*//*#i5.i294.image.js:image/base/js*/
-
-/*#/#*//*#i294.i295.positioning.js:positioning/base/js.2*/
-bmShow('i294');
 /*#/#*//*#i5.i230.image.js:image/base/js*/
 
+/*#/#*//*#i5.i300.image.js:image/base/js*/
+
+/*#/#*//*#i300.i301.positioning.js:positioning/base/js.2*/
+bmShow('i300');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -915,6 +952,10 @@ document.getElementById('i95').addEventListener('click', function(e){
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
      
+/*#/#*//*#i6.i302.image.js:image/base/js*/
+
+/*#/#*//*#i302.i303.positioning.js:positioning/base/js.2*/
+bmShow('i302');
 /*#/#*//*#i6.i272.image.js:image/base/js*/
 
 /*#/#*//*#i272.i273.positioning.js:positioning/base/js.2*/
@@ -934,10 +975,6 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i6.i296.image.js:image/base/js*/
-
-/*#/#*//*#i296.i297.positioning.js:positioning/base/js.2*/
-bmShow('i296');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -991,6 +1028,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i306.text.meta:text/meta*/
+name: Texto copy; customName: 1;
+/*#/#*//*#i306.i307.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -1001,15 +1042,15 @@ data: /*!*/{}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i294.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i294.i295.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i230.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i230.i231.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i300.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i300.i301.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i282.text.meta:text/meta*/
 name: Texto; customName: 1;
@@ -1025,6 +1066,11 @@ data: /*!*/{}/*!*/;
 name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i6.i302.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i302.i303.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i272.image.meta:image/meta*/
 name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1034,11 +1080,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i296.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i296.i297.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i288.text.meta:text/meta*/
 name: Texto; customName: 1;
@@ -1050,4 +1091,8 @@ name: Link;
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i304.font.meta:font/meta*/
+name: Web Font: Gotham-Light; type: font-local; customName: ;
+/*#/#*//*#i308.font.meta:font/meta*/
+name: Web Font: GothamMedium_1; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
