--- a/Analizar/Venetian320x480.html
+++ b/Analizar/Venetian320x480.html
@@ -2137,30 +2137,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i87.image.css:image/base/css*/
 #i87 { opacity: 1; }
 /*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
-#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
-        -ms-transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
-}
-/*#/#*//*#i89.shape.css:shape/base/css*/
-#i89 { background-color: #ffffff; opacity: 1;
-}
-/*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
-#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 19.375%;
-        -ms-transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
+#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 87px;
+        -ms-transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 22px; color: #24254a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(20px, 333px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 333px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 333px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 333px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2183,11 +2173,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 157px; height: 45px;
-        -ms-transform: translate(0, 0) translate(164px, 436px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(164px, 436px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(164px, 436px) rotate(0deg);
-        transform: translate(0, 0) translate(164px, 436px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 144px; height: 39px;
+        -ms-transform: translate(0, 0) translate(176px, 439px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(176px, 439px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(176px, 439px) rotate(0deg);
+        transform: translate(0, 0) translate(176px, 439px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2266,6 +2256,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
+/*#/#*//*#i91.font-local.css:font/font-local/css*/
+/*#i91.i92.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'GothamMedium_1';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/GothamMedium_1.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2273,29 +2275,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i87.image.html:image/html-->
-<img id="i87" src="https://i.imgur.com/iH1Rru8.jpg"/>
-<!--#/#--><!--#i89.shape.html:shape/html-->
-<div id="i89"></div>
+<img id="i87" src="https://i.imgur.com/OP9MJ5a.jpg"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Más de 1200 pruebas diagnósticas.</div>
+<div id="i7">Más de 1200 pruebas para tus diagnósticos.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/gv4RpIv.jpg"></dataimg>
+<dataimg id="i72" src="https://i.imgur.com/0NJe0nN.jpg"></dataimg>
 <!--#/#--><!--#i2.i73.slice-image.html:slice-image/html.1-->
-<dataimg id="i73" src="https://i.imgur.com/IzfbGD0.jpg"></dataimg>
+<dataimg id="i73" src="https://i.imgur.com/0nrnkD9.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/KeP64Sk.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/oiWhhga.jpg"></dataimg>
 <!--#/#--><!--#i2.i86.slice-image.html:slice-image/html.1-->
-<dataimg id="i86" src="https://i.imgur.com/5nA0EwM.jpg"></dataimg>
+<dataimg id="i86" src="https://i.imgur.com/Pza5ZTY.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/IYajfBe.png"/>
+<img id="i16" src="https://i.imgur.com/dmvXJQj.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/tbm1zmk.png"/>
 <!--#/#--><!--#i82.shape.html:shape/html-->
 <div id="i82"></div>
+<!--#/#--><!--#i91.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2321,7 +2322,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: 'rgba(144,126,196,1)',
+        shadow: 'rgba(22,47,138,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2375,8 +2376,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i89.i90.positioning.js:positioning/base/js.2*/
-bmShow('i89');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2399,27 +2398,23 @@ name: MAP; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i89.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i89.i90.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Más de 1200 pruebas diagnósticas.; customName: false;
+name: Más de 1200 pruebas para tus diagnósticos.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: gv4RpIv.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 0NJe0nN.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i73.slice-image.meta:slice-image/meta.1*/
-name: IzfbGD0.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 0nrnkD9.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: KeP64Sk.jpg; fileId: ; sourceTypeId: externalUrl;
+name: oiWhhga.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i86.slice-image.meta:slice-image/meta.1*/
-name: 5nA0EwM.jpg; fileId: ; sourceTypeId: externalUrl;
+name: Pza5ZTY.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -2437,4 +2432,6 @@ data: /*!*/{"keepAspectRatio":false}/*!*/;
 name: LINK;
 /*#/#*//*#i82.i83.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i91.font.meta:font/meta*/
+name: Web Font: GothamMedium_1; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
