--- a/Analizar/Cube.html
+++ b/Analizar/Cube.html
@@ -521,23 +521,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
         transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
 }
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 14px; color: #24254a; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 259px; height: 51px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-}
 /*#/#*//*#i4.i306.text.css:text/base/css*/
-#i306 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Light; font-size: 14px; color: #24254a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i306 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Light; font-size: 14px; color: #24254a; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i306.i307.positioning.css:positioning/base/css.1*/
-#i306 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 283px; height: 51px;
-        -ms-transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(2px, 83px) rotate(0deg);
+#i306 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 229px; height: 51px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -839,8 +830,6 @@ url('fonts/') format('svg');
 <img id="i130" src="https://i.imgur.com/DF5Npho.jpg"/>
 <!--#/#--><!--#i4.i280.image.html:image/html-->
 <img id="i280" src="https://i.imgur.com/dmvXJQj.png"/>
-<!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¡Es momento de cuidarte!</div>
 <!--#/#--><!--#i4.i306.text.html:text/html-->
 <div id="i306">Cuando previenes tienes mayores probabilidades de tener un buen estado de salud.</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -1024,10 +1013,6 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i280.i281.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i14.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i306.text.meta:text/meta*/
 name: Texto copy; customName: 1;
 /*#/#*//*#i306.i307.positioning.meta:positioning/meta.1*/
