--- a/AlmaTel/Cube.html
+++ b/AlmaTel/Cube.html
@@ -733,7 +733,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i34.text.css:text/base/css*/
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 239px; height: 41px;
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 176px; height: 41px;
         -ms-transform: translate(-50%, -50%) translate(0px, 76px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(0px, 76px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(0px, 76px) rotate(0deg);
@@ -802,7 +802,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Te olvidarás de la palabra "downloading"</div>
+<div id="i24">Te olvidarás de la palabra "downloading".</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/68i9Ebo.png"/>
 <!--#/#--><!--#i5.i376.image.html:image/html-->
