--- a/AlmaTel/FadeBig.html
+++ b/AlmaTel/FadeBig.html
@@ -30,7 +30,7 @@
         .tgx_wrapper {
             position: relative;
             overflow: hidden;
-            border: 1px solid #000000;
+            border: 1px solid #c5c5c5;
             cursor: pointer;
         }
 
