--- a/Seat/index300x250.html
+++ b/Seat/index300x250.html
@@ -152,6 +152,13 @@
         letter-spacing: -0.1em !important;
     }
 
+    #logo {
+           position: absolute;
+           height:25px;
+           margin-top: -40px !important;
+           margin-left:200px;
+       }
+
 </style>
 
 <body>
@@ -162,6 +169,9 @@
             <source src="images/Maqueta_SuvSeat_30s_V5.ogg" type="video/ogg" />
         </video>
         <!-----------RECURSO EXTERNO---------->
+
+        <!-- LOGO -->
+            <div class="logo"> <img id="logo" src="https://i.imgur.com/cgiyoHl.png" style="height:25px; margin-top: 0px;"></div>
 
         <div id="botones-b">
             <center>
