--- a/Seat/index300x250.html
+++ b/Seat/index300x250.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Adform API Script -->
+    <script type="text/javascript">
+        document.write('<script src="' + (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv=' + Math.random()) + '"><\/script>');
+
+    </script>
 </head>
 
 <style>
@@ -90,17 +95,17 @@
     }
 
     #overlay #bn1 {
-        background-image: url(images/arona.jpg)
+        background-image: url(https://josemob.github.io/page/images/arona.jpg)
             /*-----------RECURSO EXTERNO----------*/
     }
 
     #overlay #bn2 {
-        background-image: url(images/ateca.jpg)
+        background-image: url(https://josemob.github.io/page/images/ateca.jpg)
             /*-----------RECURSO EXTERNO----------*/
     }
 
     #overlay #bn3 {
-        background-image: url(images/terraco.jpg)
+        background-image: url(https://josemob.github.io/page/images/terraco.jpg)
             /*-----------RECURSO EXTERNO----------*/
     }
 
@@ -112,17 +117,17 @@
     }
 
     #btn-img1 {
-        background-image: url(images/arona-btn.png);
+        background-image: url(https://josemob.github.io/page/images/arona-btn.png);
         /*-----------RECURSO EXTERNO----------*/
     }
 
     #btn-img2 {
-        background-image: url(images/ateca-btn.png);
+        background-image: url(https://josemob.github.io/page/images/ateca-btn.png);
         /*-----------RECURSO EXTERNO----------*/
     }
 
     #btn-img3 {
-        background-image: url(images/terraco-2.jpg);
+        background-image: url(https://josemob.github.io/page/images/terraco-2.jpg);
         /*-----------RECURSO EXTERNO----------*/
     }
 
@@ -146,32 +151,32 @@
         background-color: rgba(0, 0, 0, 0.5);
         cursor: pointer;
     }
-    
-    .h4IOS{
+
+    .h4IOS {
         font-size: 16px !important;
         letter-spacing: -0.1em !important;
     }
 
     #logo {
-           position: absolute;
-           height:25px;
-           margin-top: -40px !important;
-           margin-left:200px;
-       }
+        position: absolute;
+        height: 25px;
+        margin-top: -40px !important;
+        margin-left: 200px;
+    }
 
 </style>
 
 <body>
     <content id="banner">
         <video id="video" onmouseover="videoPause()" webkit-playsinline="true" playsinline="true" autoplay muted>
-            <source src="images/Maqueta_SuvSeat_30s_V5.mp4" type="video/mp4" />
-            <source src="images/Maqueta_SuvSeat_30s_V5.webm" type="video/webm" />
-            <source src="images/Maqueta_SuvSeat_30s_V5.ogg" type="video/ogg" />
+            <source src="https://josemob.github.io/page/images/Maqueta_SuvSeat_30s_V5.mp4" type="video/mp4" />
+            <source src="https://josemob.github.io/page/images/Maqueta_SuvSeat_30s_V5.webm" type="video/webm" />
+            <source src="https://josemob.github.io/page/images/Maqueta_SuvSeat_30s_V5.ogg" type="video/ogg" />
         </video>
         <!-----------RECURSO EXTERNO---------->
 
         <!-- LOGO -->
-            <div class="logo"> <img id="logo" src="https://i.imgur.com/cgiyoHl.png" style="height:25px; margin-top: 0px;"></div>
+        <div class="logo"> <img id="logo" src="https://i.imgur.com/cgiyoHl.png" style="height:25px; margin-top: 0px;"></div>
 
         <div id="botones-b">
             <center>
@@ -187,22 +192,22 @@
 
     <content id="overlay">
         <span id="close" class="display-off" onclick="closeBanner()">X</span>
-        <div id="bn1" class="banner display-off" onclick="window.open('https://www.seat.mx/autos/arona/descubre.html', '_blank');">
+        <div id="bn1" class="banner display-off">
             <center>
                 <h4>Arona</h4>
-                <button id="redirecBtn" class="" onclick="window.open('https://www.seat.mx/autos/arona/descubre.html', '_blank');">Llegó la hora de subir el volumen</button>
+                <button id="redirecBtn" class="" onclick="adfOpenGlobalClickTAG(1)">Llegó la hora de subir el volumen</button>
             </center>
         </div>
-        <div id="bn2" class="banner display-off" onclick="https://www.seat.mx/autos/ateca/descubre.html', '_blank');">
+        <div id="bn2" class="banner display-off">
             <center>
                 <h4>Ateca</h4>
-                <button id="redirecBtn" class="" onclick="window.open('https://www.seat.mx/autos/ateca/descubre.html', '_blank');">Una mirada de confianza</button>
+                <button id="redirecBtn" class="" onclick="adfOpenGlobalClickTAG(2)">Una mirada de confianza</button>
             </center>
         </div>
-        <div id="bn3" class="banner display-off" onclick="window.open('https://www.seat.mx/autos/tarraco/descubre.html', '_blank');">
+        <div id="bn3" class="banner display-off">
             <center>
                 <h4>Tarraco</h4>
-                <button id="redirecBtn" class="" onclick="window.open('https://www.seat.mx/autos/tarraco/descubre.html', '_blank');">¿Por qué no ahora?</button>
+                <button id="redirecBtn" class="" onclick="adfOpenGlobalClickTAG(3)">¿Por qué no ahora?</button>
             </center>
         </div>
     </content>
@@ -235,6 +240,7 @@
                     clickVideo = false;
                 }
             }
+            dhtml.sendEvent(12, 'clickVideo');
         }
 
         function videoPause() { //REPRODUCIR AUTOMATICAMENTE SI EL VIDEO NO SE A PAUSADO MANUALMENTE
@@ -252,34 +258,56 @@
             if (video.currentTime > 4 && boton1 == false) { // CUANDO EL VIDEO LLEGUE A 5 SEGUNDOS
                 btns1.classList.remove('display-off'); // REMOCION DE CLASE QUE OCULTA ELEMENTOS
                 boton1 = true; // VALIDADOR PARA QUE LA ACCION NO SE REPITA
-                setTimeout(function(){
-                document.getElementById("btn-img1").classList.add('display-on-2');},500);
-                setTimeout(function(){
-                document.getElementById("btn-img2").classList.add('display-on-2');},1000);
-                setTimeout(function(){
-                document.getElementById("btn-img3").classList.add('display-on-2');},1500); 
+                setTimeout(function() {
+                    document.getElementById("btn-img1").classList.add('display-on-2');
+                }, 500);
+                setTimeout(function() {
+                    document.getElementById("btn-img2").classList.add('display-on-2');
+                }, 1000);
+                setTimeout(function() {
+                    document.getElementById("btn-img3").classList.add('display-on-2');
+                }, 1500);
             }
 
-            if (video.currentTime == porcent25) {} // EJECUCION DE EVENTO CUANDO LLEGUE A 25%
-            if (video.currentTime == porcent50) {}
-            if (video.currentTime == porcent75) {}
-            if (video.currentTime == total) {}
+            if (video.currentTime == 0) {
+                dhtml.sendEvent(1, 'video_0%');
+                console.log('0')
+            }
+            if (video.currentTime == porcent25) {
+                dhtml.sendEvent(2, 'video_25%');
+                console.log('25')
+            } // EJECUCION DE EVENTO CUANDO LLEGUE A 25%
+            if (video.currentTime == porcent50) {
+                dhtml.sendEvent(3, 'video_50%');
+                console.log('50')
+            }
+            if (video.currentTime == porcent75) {
+                dhtml.sendEvent(4, 'video_75%');
+                console.log('75')
+            }
+            if (video.currentTime == total) {
+                dhtml.sendEvent(5, 'video_100%');
+                console.log('100')
+            }
         }
 
         function btnClick(numero) {
             if (numero == 1) {
                 document.getElementById("bn1").classList.remove('display-off');
                 document.getElementById("close").classList.remove('display-off');
+                dhtml.sendEvent(6, 'ClickVentana1');
                 video.pause()
             }
             if (numero == 2) {
                 document.getElementById("bn2").classList.remove('display-off');
                 document.getElementById("close").classList.remove('display-off');
+                dhtml.sendEvent(7, 'ClickVentana2');
                 video.pause()
             }
             if (numero == 3) {
                 document.getElementById("bn3").classList.remove('display-off');
                 document.getElementById("close").classList.remove('display-off');
+                dhtml.sendEvent(8, 'ClickVentana3');
                 video.pause()
             }
         }
@@ -296,12 +324,42 @@
 
     </script>
 
-<script type="text/javascript">
-if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i)) || (navigator.userAgent.match(/like Mac OS X/i))) {
-    document.getElementById("redirecBtn").classList.add('h4IOS');
-    console.log('bfseifb');
-}
-</script>
+    <script type="text/javascript">
+        if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i)) || (navigator.userAgent.match(/like Mac OS X/i))) {
+            document.getElementById("redirecBtn").classList.add('h4IOS');
+            console.log('bfseifb');
+        }
+
+        var banner = document.getElementById('bn3');
+        clickTAGvalue = dhtml.getVar('clickTAG', 'https://www.seat.mx/autos/tarraco/descubre.html');
+        landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
+        banner.onclick = function() {
+            dhtml.sendEvent(11, 'redirTarraco');
+            window.open(clickTAGvalue, landingpagetarget); //when banner is clicked it will open new window directing to clickTAG value
+        }
+
+        function adfOpenGlobalClickTAG(num) {
+            if (num == 1) {
+                dhtml.sendEvent(9, 'redirArona');
+                clickTAGvalue = dhtml.getVar('clickTAG', 'https://www.seat.mx/autos/arona/descubre.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
+                landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
+                window.open(clickTAGvalue, landingpagetarget);
+            }
+            if (num == 2) {
+                dhtml.sendEvent(10, 'redirAteca');
+                clickTAGvalue = dhtml.getVar('clickTAG1', 'https://www.seat.mx/autos/ateca/descubre.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
+                landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
+                window.open(clickTAGvalue, landingpagetarget);
+            }
+            if (num == 3) {
+                dhtml.sendEvent(11, 'redirTarraco');
+                clickTAGvalue = dhtml.getVar('clickTAG2', 'https://www.seat.mx/autos/tarraco/descubre.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
+                landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
+                window.open(clickTAGvalue, landingpagetarget);
+            }
+        }
+
+    </script>
 </body>
 
 </html>
